--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Item Data Form</title>
+    <title>Store Sales Item Data Form</title>
     <style>
       body {
         font-family: Arial, sans-serif;
