chages sales html

--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,8 @@
     </style>
   </head>
   <body>
-    <h1>Item Data Form</h1>
+    <h1>Store Sales Prediction</h1>
+    <h2>Item Data Form</h2>
     <form id="itemForm" onsubmit="handleSubmit(event)">
       <label for="Item_Identifier">Item Identifier (optional):</label>
       <input
