--- a/templates/index.html
+++ b/templates/index.html
@@ -5,11 +5,12 @@
     <title>Store Sales Item Data Form</title>
     <style>
       body {
+        text-align: center;
         font-family: Arial, sans-serif;
         padding: 20px;
       }
       .dropdown-container {
-        margin-bottom: 15px;
+        margin:0px;
       }
       select {
         width: 200px;
